# personal-site

./: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.cjs
posts/: resume.ron
posts/projects/: _example.md  ipipiri-ar.md
posts/wishlist/: _example.md  _example2.md  home-lab.md
projects/: _example.md  home-lab.md  personal-site.md
src/: caching.rs  error.rs  home.rs  links.rs  main.rs  posts.rs  projects.rs  resume.rs  wishlist.rs
styles/: tailwind.css
templates/: base.html  index.html  macros.html
templates/pages/: 404.html  index.html  project.html  projects.html  resume.html  wishlist.html
templates/partials/: header.html  nav.html
