[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
futures-util = "0.3.29"
markdown = { version = "1.0.0-alpha.14", features = ["log", "serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
time = { version = "0.3.30", features = ["formatting"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
